--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:label="@string/app_name"
             android:name=".CameraActivity"
             android:screenOrientation="portrait">
@@ -24,12 +26,12 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".PhotoProcessActivity"
-            android:exported="false"
+		  <activity
+            android:name="org.gaochun.camera.PhotoProcessActivity"
             android:configChanges="keyboardHidden|orientation|locale|screenSize"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="portrait"/>
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
     </application>
 
 
